--- a/README
+++ b/README
@@ -1,3 +1,15 @@
 This is a large scale knn project designed to test various approaches from the literature.
 
+To recreate the pdf paper on k-means clustering, use the following commands:
+
+  $ /usr/texbin/pdflatex scaling-k-means.tex 
+  $ /usr/texbin/bibtex scaling-k-means
+  $ /usr/texbin/pdflatex scaling-k-means.tex 
+  $ /usr/texbin/pdflatex scaling-k-means.tex 
+
+You will need to install pdftex to do this. MacTex and TexShop provide nice capabilities
+for dealing with latex files.  See http://pages.uoregon.edu/koch/texshop/installing.html
+and http://pages.uoregon.edu/koch/texshop/obtaining.html
+
+
 More details anon
